small update in HTML

--- a/html/insertAnswer.html
+++ b/html/insertAnswer.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<title>Enter answers</title>
-			<link rel="stylesheet" type="text/css" href="stylesheet.css">
+			<link rel="stylesheet" type="text/css" href="insertAnswer.css">
 		</head>
 		<body>
 			<p>Vennligst registrer dine svar i skjemaet under</p>
