small fix in html

--- a/html/insertAnswer.html
+++ b/html/insertAnswer.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<title>Enter answers</title>
-			<link rel="stylesheet" type="text/css" href="insertAnswer.css">
+			<link type="text/css" rel="stylesheet" href="insertAnswer.css"/>
 		</head>
 		<body>
 			<p>Vennligst registrer dine svar i skjemaet under</p>
@@ -23,9 +23,9 @@
 				<br>
 				Alder:<br>
 				<input type="radio" name="alder" value="youngster">Youngster<br>
-				<input type="radio" name="alder" value="cool cat">Cool Cat<br>
+				<input type="radio" name="alder" value="coolcat">Cool Cat<br>
 				<input type="radio" name="alder" value="hipster">Hipster<br>
-				<input type="radio" name="alder" value="gammel ringrev">Gammel Ringrev<br>
+				<input type="radio" name="alder" value="gammelringrev">Gammel Ringrev<br>
 				<br>
 				Studiested:<br>
 				<input type="radio" name="studiested" value="ntnu">NTNU<br>
@@ -57,22 +57,22 @@
 				<input type="radio" name="hypepreferanse" value="laerkidsakoding">Lær Kidsa Koding<br>
 				<br>
 				Favorittgode på jobb:<br>
-				<input type="radio" name="favorittgode" value="Fribar">Fri bar på julebordet<br>
+				<input type="radio" name="favorittgode" value="fribar">Fri bar på julebordet<br>
 				<input type="radio" name="favorittgode" value="gadgetkonto">Gadgetkonto<br>
 				<input type="radio" name="favorittgode" value="kurskonferanse">Kurs og konferanser<br>
 				<input type="radio" name="favorittgode" value="frikantine">Fri kantine<br>
 				<input type="radio" name="favorittgode" value="pensjon">Pensjon<br>
 				<br>
 				Planer for kvelden:<br>
-				<input type="radio" name="planerforkvelden" value="endresivilstatus">Endre sivilstatus<br>
-				<input type="radio" name="planerforkvelden" value="smiskemedsjefen">Smiske med sjefen<br>
-				<input type="radio" name="planerforkvelden" value="mingle">Mingle<br>
-				<input type="radio" name="planerforkvelden" value="kode">Kode<br>
-				<input type="radio" name="planerforkvelden" value="nytelivet">Nyte livet<br>
+				<input type="radio" name="planer_for_kvelden" value="endresivilstatus">Endre sivilstatus<br>
+				<input type="radio" name="planer_for_kvelden" value="smiskemedsjefen">Smiske med sjefen<br>
+				<input type="radio" name="planer_for_kvelden" value="mingle">Mingle<br>
+				<input type="radio" name="planer_for_kvelden" value="kode">Kode<br>
+				<input type="radio" name="planer_for_kvelden" value="nytelivet">Nyte livet<br>
 				<br>
 				Premie hvis du vinner: <br>
-				<input type="radio" name="premiehvisduvinner" value="moto360">Moto360<br>
-				<input type="radio" name="premiehvisduvinner" value="oculusrift">Oculus Rift<br>
+				<input type="radio" name="premie_hvis_du_vinner" value="moto360">Moto360<br>
+				<input type="radio" name="premie_hvis_du_vinner" value="oculusrift">Oculus Rift<br>
 
 
 
