very small fixes

--- a/html/insertAnswer.html
+++ b/html/insertAnswer.html
@@ -1,8 +1,8 @@
 	<!DOCTYPE html>
 	<html>
 		<head>
-			<title>Enter answers</title>
-			<link type="text/css" rel="stylesheet" href="insertAnswer.css"/>
+			<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+			<title>bouvet</title>
 		</head>
 		<body>
 			<p>Vennligst registrer dine svar i skjemaet under</p>
