--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="answerApp">
 <head>
-	<script type="text/javascript" src="../js/angular.min.js"></script>
+	<script type="text/javascript" src="../external_libs/angular.min.js"></script>
 	<script type="text/javascript" src="../js/app.js"></script>
 </head>
 <body>
