--- a/public/html/index.html
+++ b/public/html/index.html
@@ -16,13 +16,13 @@
 
 <div class="container-fluid">
 	<div class="row row-custom" >
-		<form action="/readAnswerPage" method="get" class="navbar-form ">
+		<form action="/public/html/allAnswers.html" method="get" class="navbar-form ">
 			<button class="btn btn-primary" name="readAnswer" type="submit">Se alle svar</button>
 		</form>
 	</div>
 
 	<div class="row row-custom">
-		<form action="/insertAnswer" method="get"  class="navbar-form">
+		<form action="/public/html/insertAnswer.html" method="get"  class="navbar-form">
 			<button class="btn btn-primary" name="InsertAnswer" type="submit">Registrere svar</button>
 		</form>
 	</div>
