--- a/public/html/insertAnswer.html
+++ b/public/html/insertAnswer.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 	<html>
 		<head>
-			<link type="text/css" rel="stylesheet" href="/html/stylesheet.css"/>
+			<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 			<title>Overskrift</title>
 		</head>
 		<body>
