--- a/public/html/allAnswers.html
+++ b/public/html/allAnswers.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html>	
 <html ng-app>
 <head>
 	<title>All answers</title>
@@ -42,7 +42,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<form action="/index" method="get">
+		<form action="/public/html/index.html" method="get">
 			<button type="submit" button name="backToMenu" class="btn btn-primary">
 				<span class="glyphicon glyphicon-home">
 				</span>
