--- a/html/insertAnswer.html
+++ b/html/insertAnswer.html
@@ -17,14 +17,15 @@
 
 		<body>
 			<h1> bouvet </h1>
-			<br><br><br>
+			<br>
 
 			
-			<form action="/insertAnswerDb" method="post">
-				<table>
+		<form action="/insertAnswerDb" method="post">
+			<table>
 
-
-
+		
+		<div class="wrapper text-centering container-fluid">
+			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Sivilstatus: </div><br>
 					<label class="btn btn-primary">
@@ -39,7 +40,7 @@
 					<label class="btn btn-primary">
 					<input type="radio" name="sivilstatus" value="complicated">It's complicated<br>
 					</label>
-				</div>
+				</div>	
 					<br><br>
 
 
@@ -82,9 +83,11 @@
 					<input type="radio" name="alder" value="gammelringrev">Gammel Ringrev<br>
 					</label>
 				</div>
+			</div>
 					<br><br>
 
 
+			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Studiested: </div><br>
 					<label class="btn btn-primary">
@@ -100,6 +103,7 @@
 					<br><br>
 
 
+			
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Programmeringsstil: </div><br>
 					<label class="btn btn-primary">
@@ -139,9 +143,11 @@
 					<input type="radio" name="musikk" value="klassisk">Klassisk<br>
 					</label>
 				</div>
+			</div>
 					<br><br>
 
 
+			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Personlighet: </div><br>
 					<label class="btn btn-primary">
@@ -171,7 +177,6 @@
 				</div>
 					<br><br>
 
-
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Favorittgode på jobb: </div><br>
 					<label class="btn btn-primary">
@@ -190,9 +195,11 @@
 					<input type="radio" name="favorittgode" value="pensjon">Pensjon<br>
 					</label>
 				</div>
+			</div>
 					<br><br>
 
 
+			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Planer for kvelden: </div><br>
 					<label class="btn btn-primary">
@@ -221,15 +228,14 @@
 					<label class="btn btn-primary">
 					<input type="radio" name="premie_hvis_du_vinner" value="oculusrift">Oculus Rift<br>
 					</label>
-					
 				</div>
-				<br>
-				<br>
-			
+			</div>
+				<br><br>
+		</div>
 
 
 			</table>
-				<br>
+				<br><br><br>
 
 				<input class="button-register" type="submit" value="Registrer svar">
 			</form>
