Added complete workflow for application

--- a/public/html/insertAnswer.html
+++ b/public/html/insertAnswer.html
@@ -24,7 +24,8 @@
 			<table>
 
 		
-		<div class="wrapper text-centering container-fluid">
+	<div class="wrapper text-centering container-fluid">
+		<div class="row">
 			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Sivilstatus: </div><br>
@@ -230,14 +231,15 @@
 					</label>
 				</div>
 			</div>
-				<br><br>
 		</div>
+				<br><br>
+	</div>
 
 
 			</table>
 				<br><br><br>
 
-				<input class="button-register" type="submit" value="Registrer svar">
+				<input class="btn-submit" type="submit" value="Registrer svar">
 			</form>
 			<br><br><br>
 
