--- a/public/html/index.html
+++ b/public/html/index.html
@@ -22,7 +22,7 @@
 	</div>
 
 	<div class="row row-custom">
-		<form action="/public/html/insertAnswer.html" method="get"  class="navbar-form">
+		<form action="/public/html/start.html" method="get"  class="navbar-form">
 			<button class="btn btn-primary" name="InsertAnswer" type="submit">Registrere svar</button>
 		</form>
 	</div>
