small changes with buttons

--- a/public/html/insertAnswer.html
+++ b/public/html/insertAnswer.html
@@ -25,7 +25,6 @@
 
 		
 	<div class="wrapper text-centering container-fluid">
-		<div class="row">
 			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Sivilstatus: </div><br>
@@ -84,11 +83,10 @@
 					<input type="radio" name="alder" value="gammelringrev">Gammel Ringrev<br>
 					</label>
 				</div>
-			</div>
+			
 					<br><br>
 
 
-			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Studiested: </div><br>
 					<label class="btn btn-primary">
@@ -101,10 +99,12 @@
 					<input type="radio" name="studiested" value="annet">Annet<br>
 					</label>
 				</div>
+				</div>
 					<br><br>
 
 
 			
+			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Programmeringsstil: </div><br>
 					<label class="btn btn-primary">
@@ -144,11 +144,9 @@
 					<input type="radio" name="musikk" value="klassisk">Klassisk<br>
 					</label>
 				</div>
-			</div>
 					<br><br>
 
 
-			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Personlighet: </div><br>
 					<label class="btn btn-primary">
@@ -176,8 +174,11 @@
 					<input type="radio" name="hypepreferanse" value="laerkidsakoding">Lær Kidsa Koding<br>
 					</label>
 				</div>
+				</div>
 					<br><br>
 
+
+			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Favorittgode på jobb: </div><br>
 					<label class="btn btn-primary">
@@ -196,11 +197,10 @@
 					<input type="radio" name="favorittgode" value="pensjon">Pensjon<br>
 					</label>
 				</div>
-			</div>
+			
 					<br><br>
 
 
-			<div class="col-sm-4">
 				<div class="btn-group-vertical" data-toggle="buttons">
 					<div class="header-question"> Planer for kvelden: </div><br>
 					<label class="btn btn-primary">
@@ -231,17 +231,18 @@
 					</label>
 				</div>
 			</div>
-		</div>
 				<br><br>
 	</div>
 
 
 			</table>
 				<br><br><br>
+			<div class="container">
 
-				<input class="btn-submit" type="submit" value="Registrer svar">
+				<input class="btn btn-submit" type="submit" value="Registrer svar">
 			</form>
-			<br><br><br>
+		</div>
+			<br><br>
 
 
 			 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -249,7 +250,7 @@
 			 <!-- Include all compiled plugins (below), or include individual files as needed -->
 			 <script src="../external_libs/bootstrap/js/bootstrap.min.js"></script>
 
-			
+			<br><br>
 
 		</body>
 	</html>
