--- a/public/html/start.html
+++ b/public/html/start.html
@@ -17,7 +17,7 @@
 		<body>
 			<h1 class="header-start"> The Beauty of Data </h1>
 		<form action="/public/html/insertAnswer.html" method="get">
-			<input class="btn-submit btn-start" type="submit" value="Start">
+			<input class="btn btn-submit btn-start" type="submit" value="Start">
 		</form>
 	</div>
 
@@ -25,8 +25,6 @@
 			 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 			 <!-- Include all compiled plugins (below), or include individual files as needed -->
 			 <script src="../external_libs/bootstrap/js/bootstrap.min.js"></script>
-
-			
 
 		</body>
 	</html>
