--- a/public/html/submitInfo.html
+++ b/public/html/submitInfo.html
@@ -39,16 +39,25 @@
 		      <input type="email" class="form-control form-field text-white" name="email" placeholder="Email">
 		    </div>
 		  </div>
-
+		  <br>
 		  <div class="form-group">
 		    <div class="col-sm-offset-2 col-sm-8">
-		      <button type="submit" class="btn btn-register">Submit info</button>
+		      <button type="submit" class="btn btn-submit">Submit info</button>
 		    </div>
 		  </div>
+		</form>
+	<br><br><br>
+
+	<form action="/public/html/start.html" method="get">
+			<input class="btn btn-escape" type="submit" value="Nei takk, tilbake til hovedsiden">
 		</form>
 
 
 	</div>
+
+
+
+
 			 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 			 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 			 <!-- Include all compiled plugins (below), or include individual files as needed -->
