same default button in all windows

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,7 +11,7 @@
 	<div class="container-fluid btn-group-custom">
 		<div class="row" >
 			<form action="/public/html/allAnswers.html" method="get" class="navbar-form ">
-				<button class="btn btn-primary-custom btn-block" name="readAnswer" type="submit">
+				<button class="btn btn-def-bouvet btn-block" name="readAnswer" type="submit">
 					<span class="glyphicon glyphicon-list"></span>
 					Se alle svar</button>
 			</form>
@@ -19,7 +19,7 @@
 
 		<div class="row">
 			<form action="/public/html/start.html" method="get"  class="navbar-form">
-				<button class="btn btn-primary-custom btn-block" name="InsertAnswer" type="submit">
+				<button class="btn btn-def-bouvet btn-block" name="InsertAnswer" type="submit">
 					<span class="glyphicon glyphicon-pencil"></span>
 					Registrere svar</button>
 			</form>
@@ -27,7 +27,7 @@
 
 		<div class="row">
 			<form action="/deleteAnswers" method="get"  class="navbar-form">
-				<button class="btn btn-primary-custom btn-block" name="deleteAllAnswers" type="submit">
+				<button class="btn btn-def-bouvet btn-block" name="deleteAllAnswers" type="submit">
 					<span class="glyphicon glyphicon-trash"></span>
 					Slett alle svar</button>
 			</form>
@@ -35,7 +35,7 @@
 
 		<div class="row">
 			<form action="/public/html/participants.html" method="get"  class="navbar-form">
-				<button class="btn btn-primary-custom btn-block" name="participants" type="submit">
+				<button class="btn btn-def-bouvet btn-block" name="participants" type="submit">
 					<span class="glyphicon glyphicon-user"></span>
 				Se alle deltakere</button>
 			</form>
@@ -43,7 +43,7 @@
 
 		<div class="row">
 			<form action="/deleteParticipants" method="get"  class="navbar-form">
-				<button class="btn btn-primary-custom btn-block" name="deleteAllParticipants" type="submit">
+				<button class="btn btn-def-bouvet btn-block" name="deleteAllParticipants" type="submit">
 					<span class="glyphicon glyphicon-trash"></span>
 					Slett alle deltakere</button>
 			</form>
