--- a/public/html/insertAnswer.html
+++ b/public/html/insertAnswer.html
@@ -239,7 +239,7 @@
 				<br><br><br>
 			<div class="container">
 
-				<input class="btn btn-submit" type="submit" value="Registrer svar">
+				<input class="btn btn-def-bouvet" type="submit" value="Registrer svar">
 			</form>
 		</div>
 			<br><br>
