--- a/public/html/start.html
+++ b/public/html/start.html
@@ -17,7 +17,7 @@
 		<body>
 			<h1 class="header-start"> The Beauty of Data </h1>
 		<form action="/public/html/insertAnswer.html" method="get">
-			<input class="btn btn-submit btn-start" type="submit" value="Start">
+			<input class="btn btn-def-bouvet btn-start" type="submit" value="Start">
 		</form>
 	</div>
 
