--- a/public/html/submitInfo.html
+++ b/public/html/submitInfo.html
@@ -42,7 +42,7 @@
 		  <br>
 		  <div class="form-group">
 		    <div class="col-sm-offset-2 col-sm-8">
-		      <button type="submit" class="btn btn-submit">Submit info</button>
+		      <button type="submit" class="btn btn-def-bouvet">Submit info</button>
 		    </div>
 		  </div>
 		</form>
