Revert "styling menu"
This reverts commit 727360131dd276bb3dbd924a5ee0df35b60f3226.

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,41 +11,31 @@
 	<div class="container-fluid btn-group-custom">
 		<div class="row" >
 			<form action="/public/html/allAnswers.html" method="get" class="navbar-form ">
-				<button class="btn btn-primary-custom btn-block" name="readAnswer" type="submit">
-					<span class="glyphicon glyphicon-list"></span>
-					Se alle svar</button>
+				<button class="btn btn-primary-custom" name="readAnswer" type="submit">Se alle svar</button>
 			</form>
 		</div>
 
 		<div class="row">
 			<form action="/public/html/start.html" method="get"  class="navbar-form">
-				<button class="btn btn-primary-custom btn-block" name="InsertAnswer" type="submit">
-					<span class="glyphicon glyphicon-pencil"></span>
-					Registrere svar</button>
+				<button class="btn btn-primary-custom" name="InsertAnswer" type="submit">Registrere svar</button>
 			</form>
 		</div>
 
 		<div class="row">
 			<form action="/deleteAnswers" method="get"  class="navbar-form">
-				<button class="btn btn-primary-custom btn-block" name="deleteAllAnswers" type="submit">
-					<span class="glyphicon glyphicon-trash"></span>
-					Slett alle svar</button>
+				<button class="btn btn-primary-custom" name="deleteAllAnswers" type="submit">Slett alle svar</button>
 			</form>
 		</div>
 
 		<div class="row">
 			<form action="/public/html/participants.html" method="get"  class="navbar-form">
-				<button class="btn btn-primary-custom btn-block" name="participants" type="submit">
-					<span class="glyphicon glyphicon-user"></span>
-				Se alle deltakere</button>
+				<button class="btn btn-primary-custom" name="participants" type="submit">Se alle deltakere</button>
 			</form>
 		</div>
 
 		<div class="row">
 			<form action="/deleteParticipants" method="get"  class="navbar-form">
-				<button class="btn btn-primary-custom btn-block" name="deleteAllParticipants" type="submit">
-					<span class="glyphicon glyphicon-trash"></span>
-					Slett alle deltakere</button>
+				<button class="btn btn-primary-custom" name="deleteAllParticipants" type="submit">Slett alle deltakere</button>
 			</form>
 		</div>
 	</div>
